unpackaged/main/default/objects/ETDI_Trainees__c/ETDI_Trainees__c.object-meta.xml
<CustomObject>
    <label>ETDI Trainees</label>
    <nameField>
        <displayFormat>TRA - {00000}</displayFormat>
        <label>Trainee Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETDI Trainees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>