unpackaged/main/default/objects/ETDI_Trainees__c/fields/Certificate_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Serial_Number__c</fullName>
    <displayFormat>ET-ETTC-2023-{000000}</displayFormat>
    <label>Certificate Serial Number</label>
    <type>AutoNumber</type>
</CustomField>