unpackaged/main/default/objects/ETDI_Trainees__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ETDI Trainees</relationshipLabel>
    <relationshipName>ETDI_Trainees</relationshipName>
    <type>Lookup</type>
</CustomField>