unpackaged/main/default/objects/ETDI_Trainees__c/fields/ETDI_Booking_Request__c.field-meta.xml
<CustomField>
    <fullName>ETDI_Booking_Request__c</fullName>
    <label>Booking Request</label>
    <referenceTo>ETDI_Booking_Request__c</referenceTo>
    <relationshipLabel>ETDI Trainees</relationshipLabel>
    <relationshipName>ETDI_Trainees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>