unpackaged/main/default/objects/ETDI_Trainees__c/fields/Practical_Marks__c.field-meta.xml
<CustomField>
    <fullName>Practical_Marks__c</fullName>
    <label>Practical Marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>