unpackaged/main/default/objects/ETDI_Trainees__c/fields/Theoretical_Marks__c.field-meta.xml
<CustomField>
    <fullName>Theoretical_Marks__c</fullName>
    <label>Theoretical Marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>