unpackaged/main/default/objects/ETDI_Trainees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>ETDI_Booking_Request__c</columns>
    <columns>Attended__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>